Fix spacing between conversion boxes

--- a/index.css
+++ b/index.css
@@ -97,6 +97,7 @@ input:focus {
     flex-direction: column;
     justify-content: center;
     height: 285px;
+    margin-bottom: 36px;
 }
 
 
